обновление структуры html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
 <head> 
 <meta charset="UTF-8"> 
-<title>...</title> <!-- Задаем заголовок документа -->
+<title>Проект</title>
 </head>
 <body> 
-<div>
-</div>
 <div>
 </div>
 </body>
